update docker env

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,6 +4,8 @@ services:
     build:
       context: .
       dockerfile: Dockerfile
+    environment:
+      - TERM=xterm-256color
     volumes:
       - .:/usr/src/kmcc
       - $HOME/.vimrc:/root/.vimrc
